--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,31 @@
     padding: 0;
     box-sizing: border-box;
     background-color: #212121;
+    color: white;
+}
+
+.box{
+    width: 800px;
+    height: 100vh;
+    margin: 0 auto;
+    background-color: #121212;
+    padding: 25px;
+}
+
+.margin1{
+    margin: 1rem;
+}
+.backgroundColor{
+    background-color: #121212;
+}
+
+.addButton{
+    height: 24px;
+    width: 24px;
+    text-align: center;
+    border-radius: 7px;
+}
+.input{
+    min-height: 24px;
+    border-radius: 7px;
 }
